Mege develop (#31)
* adds first screen

* fix bug

* minor changes in front

* minor changes

* first attempt at refactor

* refactor simulator service part 1

* adds redis to simulator service

* minor changes in front

* minor changes

* adds redis integration test and removes redis keys initialization

* fixes redis integration test for github actions

* adds redis service to simulator github actions

* adds redis service to simulator github actions

* Update simulator.yaml

* Update simulator.yaml